got dialog editor tests working